--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,36 @@ TECH_STACK.md
 node_modules/
 .pnp/
 .pnp.js
+.pnpm-store/
+.npm/
+.yarn-integrity
 
 # testing
 /coverage
+**/__coverage__/
+**/__snapshots__/
+/cypress/screenshots/
+/cypress/videos/
 
 # production
 /build
 /dist
+**/dist/
+**/build/
+**/.build/
+
+# Next.js specific
+.next/
+**/.next/
+out/
+**/out/
+.vercel
+**/.vercel
+.turbo
+**/.turbo
+*.tsbuildinfo
+next-env.d.ts
+.swc/
 
 # React Native
 .expo/
@@ -25,6 +48,9 @@ web-build/
 
 # macOS
 .DS_Store
+._*
+.Spotlight-V100
+.Trashes
 
 # env files
 .env
@@ -35,6 +61,8 @@ web-build/
 .dev.vars
 
 # logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -43,14 +71,49 @@ pnpm-debug.log*
 # editor directories and files
 .idea/
 .vscode/
+.cursor/
+**/.cursor/
+.history/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+*.sublime-project
+*.sublime-workspace
 
 # Temporary files
-*.log
-*.log.*
 *.tmp
-*.temp 
+*.temp
+
+# Cache
+.eslintcache
+.stylelintcache
+**/.cache/
+**/.sass-cache/
+**/.cache-loader/
+
+# Documentation & Storybook
+**/storybook-static/
+**/.storybook/build/
+**/.mdx-data/
+
+# TypeScript
+tsconfig.tsbuildinfo
+**/*.tsbuildinfo
+
+# Generated files
+.generated
+public/sitemap*.xml
+public/robots.txt
+public/sw.js
+public/workbox-*.js
+**/_generated_*
+
+# Local Netlify folder
+.netlify
+
+# Optional: Uncomment if you want to ignore lock files
+# **/yarn.lock
+# **/package-lock.json
+# **/pnpm-lock.yaml 
