--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
+  "globalEnv": ["RESEND_API_KEY", "RESEND_AUDIENCE_ID"],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
