--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^12.4.11",
-    "next": "^14.0.0",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
+    "framer-motion": "^10.18.0",
+    "next": "^14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "resend": "^2.0.0"
