--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,14 +13,26 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.0.0",
+    "@supabase/auth-helpers-nextjs": "^0.8.0",
+    "@supabase/supabase-js": "^2.39.0",
+    "@types/uuid": "^10.0.0",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "lucide-react": "^0.482.0",
     "next": "^14.0.0",
+    "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@reduxjs/toolkit": "^2.0.0",
     "react-redux": "^9.0.0",
-    "@nozbe/watermelondb": "^0.24.0"
+    "tailwind-merge": "^2.0.0",
+    "uuid": "^11.1.0",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
