--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "turbo": "latest",
-    "prettier": "latest"
+    "prettier": "latest",
+    "turbo": "latest"
   },
   "packageManager": "npm@9.6.0",
   "engines": {
@@ -38,5 +38,9 @@
   "bugs": {
     "url": "https://github.com/evan-taylor/clendr/issues"
   },
-  "homepage": "https://github.com/evan-taylor/clendr#readme"
+  "homepage": "https://github.com/evan-taylor/clendr#readme",
+  "dependencies": {
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.1"
+  }
 }
